--- a/public/css/frontend-style.css
+++ b/public/css/frontend-style.css
@@ -8,11 +8,15 @@
     --heading-font-family: 'Raleway', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: var(--body-font-family);
-    font-size: 16px;
+    font-size: 18px;
     color: var(--body-color);
-    line-height: 1.5;
+    line-height: 1.6;
     font-weight: 400;
     background: #ffffff;
     -webkit-text-size-adjust: 100%;
@@ -21,6 +25,7 @@ body {
 a,
 a:hover {
     text-decoration: none;
+    color: var(--main-color);
 }
 
 a {
@@ -74,11 +79,22 @@ blockquote {
     border-left: 8px solid #eee;
 }
 
+p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 :active,
  :focus,
 .navbar-toggler:focus,
 .btn:active,
-.btn:focus {
+.btn:focus,
+.form-control:focus,
+.btn-check:active+.btn:focus,
+.btn-check:checked+.btn:focus,
+.btn.active:focus,
+.btn.show:focus,
+.btn:active:focus {
     outline: none;
     box-shadow: none;
 }
@@ -169,10 +185,10 @@ blockquote {
     top: 0;
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
-.breadcrumb>li>a,
-.breadcrumb>li.active {
+.breadcrumb>li {
     font-family: var(--heading-font-family);
     font-size: 12px;
     font-weight: 700;
@@ -267,7 +283,7 @@ blockquote {
     position: absolute;
     left: 0;
     right: 0;
-    top: 100%;
+    top: calc(100% + 5px);
     bottom: 0;
 }
 
@@ -278,10 +294,12 @@ blockquote {
     background: #fff;
     border: 0;
     outline: none;
+    box-shadow: 0px 0px 4px 1px #8b8888;
 }
 
 #navigatin-search-icon {
     -webkit-text-stroke: 1px;
+    cursor: pointer;
 }
 
 .side-navbar {
@@ -550,13 +568,20 @@ blockquote {
 .blog-single-post-content h3,
 .blog-single-post-content h4,
 .blog-single-post-content h5,
-.blog-single-post-content h6 {
-    margin-top: 16px;
-    margin-bottom: 16px;
-    font-weight: var(--heading-font-family);
+.blog-single-post-content h6,
+.blog-biography-tab-content h1,
+.blog-biography-tab-content h2,
+.blog-biography-tab-content h3,
+.blog-biography-tab-content h4,
+.blog-biography-tab-content h5,
+.blog-biography-tab-content h6 {
+    font-size: 20px;
+    font-family: var(--heading-font-family);
+    font-weight: 800;
     border-left: 5px solid var(--main-color);
     padding-left: 10px;
-    font-weight: 700;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .blog-single-post-meta {
@@ -575,6 +600,10 @@ blockquote {
 
 .blog-single-post-meta-cats a::after {
     content: ",";
+}
+
+.blog-single-post-meta-cats a:last-child:after {
+    content: " ";
 }
 
 .blog-single-post-meta .blog-single-post-meta-date>span,
@@ -608,11 +637,23 @@ blockquote {
     font-weight: 700;
     text-transform: none;
     letter-spacing: 0;
+    transition: all 0.4s ease-in-out;
+}
+
+.blog-single-post-tags a:hover,
+.blog-category-item-tags a:hover {
+    color: var(--heading-color);
+    transition: all 0.4s ease-in-out;
 }
 
 .blog-single-post-tags a::after,
 .blog-category-item-tags a::after {
     content: ",";
+}
+
+.blog-single-post-tags a:last-child:after,
+.blog-category-item-tags a:last-child:after {
+    content: "";
 }
 
 .blog-single-post-related .section-title {
@@ -647,6 +688,11 @@ blockquote {
     height: 90px;
 }
 
+.blog-biography-related-post .blog-sidebar-cat-thumb {
+    min-height: 100px;
+    height: 100%;
+}
+
 .blog-sidebar-cat-title {
     font-family: var(--heading-font-family);
     font-size: 16px;
@@ -678,8 +724,159 @@ blockquote {
     letter-spacing: 2px;
 }
 
+.blog-sidebar-biography-item .ribbon-item {
+    width: 60px;
+    height: 67px;
+}
+
+.blog-sidebar-biography-item .ribbon-item-inner {
+    width: 100px;
+    top: 12px;
+    font-size: 10px;
+    font-weight: 400;
+    right: 29px;
+}
+
 .blog-category-post .section-title a {
     font-size: 20px;
+}
+
+.blog-single-biography-facts table {
+    width: 100%;
+    max-width: 100%;
+}
+
+.blog-single-biography-facts table>tbody>tr>td,
+.blog-single-biography-facts table>tbody>tr>th {
+    font-family: var(--heading-font-family);
+    font-weight: 400;
+    padding: 8px 8px 8px 0;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-bottom: 1px solid #dedede;
+    border-top: none;
+    font-size: 14px;
+}
+
+.blog-single-biography-facts table>tbody>tr>th {
+    font-weight: 700;
+}
+
+table.facts tr:nth-child(n+4) {
+    display: none;
+}
+
+table.facts tr:last-child {
+    display: table-row;
+}
+
+table.facts tr:last-child td a {
+    font-weight: 700;
+}
+
+.blog-single-biography-facts table>tbody>tr:last-child>td,
+.blog-single-biography-facts table>tbody>tr:last-child>th {
+    border: none;
+    text-align: center;
+}
+
+.blog-single-biography-facts table>tbody>tr>td a,
+.blog-single-biography-facts table>tbody>tr>th a {
+    color: var(--main-color);
+    transition: all 0.4s ease;
+}
+
+.blog-single-biography-facts table>tbody>tr>td a:hover,
+.blog-single-biography-facts table>tbody>tr>th a:hover {
+    color: var(--heading-color);
+    transition: all 0.4s ease;
+}
+
+.blog-biography-single-post-relationship ul {
+    list-style: disc;
+    padding-left: 40px;
+}
+
+.blog-biography-single-post-relationship ul li {
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    padding: 4px 2px;
+}
+
+.blog-biography-single-post-anniversary .aniversary-button,
+.blog-biography-single-post-birthday .birthday-button {
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 10px 15px 10px 0;
+}
+
+.blog-biography-single-post-anniversary .aniversary-button {
+    background: var(--main-color);
+}
+
+.blog-biography-single-post-birthday .birthday-button {
+    background: #FBDF07;
+}
+
+.blog-biography-single-post-anniversary .aniversary-button a,
+.blog-biography-single-post-birthday .birthday-button a {
+    color: #fff;
+}
+
+.blog-biography-single-post-birthday .birthday-button a {
+    color: var(--body-color);
+}
+
+.filter-search {
+    background-color: var(--main-color);
+}
+
+.blog-biography-single-post-shorttext {
+    border: 2px solid var(--main-color);
+    padding: 10px 20px;
+}
+
+.blog-biography-tab-header {
+    border: 2px solid var(--body-color);
+    padding: 10px 20px;
+}
+
+ul.blog-biography-tab-header-list {
+    list-style: decimal;
+    padding-left: 20px;
+    color: var(--main-color);
+}
+
+ul.blog-biography-tab-header-list li a:hover {
+    color: var(--main-color);
+    text-decoration: underline;
+}
+
+.blog-biography-tab-content a {
+    text-decoration: underline;
+    transition: all 0.4s ease-in-out;
+}
+
+.blog-biography-tab-content a:hover {
+    text-decoration: none;
+    text-decoration: underline;
+    transition: all 0.4s ease-in-out;
+}
+
+.blog-biography-related-post .blog-sidebar-cat-content {
+    border-bottom: 1px dotted var(--body-color);
+    padding: 20px 0;
+}
+
+.sidebar-section {
+    will-change: min-height;
+}
+
+.sidebar-inner {
+    transform: translate(0, 0);
+    /* For browsers don't support translate3d. */
+    transform: translate3d(0, 0, 0);
+    will-change: position, transform;
 }
 
 .footer {
@@ -744,4 +941,53 @@ blockquote {
     border-radius: 0 20px 20px 0;
     background: var(--main-color);
     color: #fff;
+}
+
+.loadMoreContent .col,
+.loadMoreContentCategory .col {
+    display: none;
+}
+
+.load-more-btn {
+    width: 200px;
+    color: #fff;
+    display: block;
+    text-align: center;
+    margin: 5px auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid var(--main-color);
+    background-color: var(--main-color);
+    transition: .3s linear;
+    cursor: pointer;
+}
+
+.load-more-btn:hover {
+    color: var(--main-color);
+    background-color: #fff;
+    border: 1px solid var(--main-color);
+    text-decoration: none;
+    transition: .3s linear;
+}
+
+.noContent {
+    color: #000 !important;
+    background-color: transparent !important;
+    border: none !important;
+    pointer-events: none;
+}
+
+
+/* Responsive */
+
+@media (max-width: 991px) {
+    .footer-social,
+    .footer-menu {
+        flex-direction: column;
+    }
+    .footer-social li,
+    .footer-menu li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
